--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,2 +1,11 @@
 <%# add navigation links to this file %>
 <li><%= link_to 'About', page_path('about') %></li>
+<% if user_signed_in? %>
+<li>
+  <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
+</li>
+<% else %>
+<li>
+  <%= link_to('Login', new_user_session_path)  %>
+</li>
+<% end %>
