falta as respostas

--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -26,6 +26,7 @@
       <%= link_to 'New Card', new_card_path %>
       <%= link_to 'Edit', edit_card_path(@card) %> |
       <%= link_to 'Back', cards_path %>
+      <%= link_to 'Games', games_path %>
     </div>
   </div>
 </div>
