--- a/app/views/cards/_form.html.erb
+++ b/app/views/cards/_form.html.erb
@@ -2,9 +2,12 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
+    <%= f.input :title %>
     <%= f.input :question %>
     <%= f.input :answer %>
+    <%= f.input :image , hint: 'type the path of the picture on the internet'%>
     <%= f.input :share %>
+    <%= f.association :kind %>
   </div>
 
   <div class="form-actions">
