--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -6,8 +6,10 @@
       <table>
         <thead>
           <tr>
+            <th>Title</th>
             <th>Question</th>
             <th>Answer</th>
+            <th>Kind</th>
             <th>Share</th>
             <th colspan="3"></th>
           </tr>
@@ -16,8 +18,10 @@
         <tbody>
           <% @cards.each do |card| %>
           <tr>
+            <td><%= card.title %></td>
             <td><%= card.question %></td>
             <td><%= card.answer %></td>
+            <td><%= card.kind.name %></td>
             <td><%= card.share %></td>
             <td><%= link_to 'Show', card %></td>
             <td><%= link_to 'Edit', edit_card_path(card) %></td>
