--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,5 +1,8 @@
 <%# add navigation links to this file %>
 <li><%= link_to 'About', page_path('about') %></li>
+<li><%= link_to 'Cards', cards_path %></li>
+<li><%= link_to 'Kinds', kinds_path %></li>
+<li><%= link_to 'Games', games_path %></li>
 <% if user_signed_in? %>
 <li>
   <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
