--- a/app/views/kinds/edit.html.erb
+++ b/app/views/kinds/edit.html.erb
@@ -1,6 +1,13 @@
-<h1>Editing Kind</h1>
+<div class="container">
+  <div class="row">
+    <h1>Editing Kind</h1>
+    <div class="col-lg-12">
 
-<%= render 'form' %>
 
-<%= link_to 'Show', @kind %> |
-<%= link_to 'Back', kinds_path %>
+      <%= render 'form' %>
+
+      <%= link_to 'Show', @kind %> |
+      <%= link_to 'Back', kinds_path %>
+    </div>
+  </div>
+</div>
