--- a/app/views/kinds/index.html.erb
+++ b/app/views/kinds/index.html.erb
@@ -1,31 +1,38 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+  <div class="row">
+    <h1>Listing Kinds</h1>
+    <div class="col-lg-12">
+      <p id="notice"><%= notice %></p>
 
-<h1>Listing Kinds</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Color</th>
-      <th>Personal</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @kinds.each do |kind| %>
-      <tr>
-        <td><%= kind.name %></td>
-        <td><%= kind.color %></td>
-        <td><%= kind.personal %></td>
-        <td><%= link_to 'Show', kind %></td>
-        <td><%= link_to 'Edit', edit_kind_path(kind) %></td>
-        <td><%= link_to 'Destroy', kind, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      <table>
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Color</th>
+            <th>Personal</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
 
-<br>
+        <tbody>
+          <% @kinds.each do |kind| %>
+          <tr>
+            <td><%= kind.name %></td>
+            <td><%= kind.color %></td>
+            <td><%= kind.personal %></td>
+            <td><%= link_to 'Show', kind %></td>
+            <td><%= link_to 'Edit', edit_kind_path(kind) %></td>
+            <td><%= link_to 'Destroy', kind, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
 
-<%= link_to 'New Kind', new_kind_path %>
+      <br>
+
+      <%= link_to 'New Kind', new_kind_path %>
+    </div>
+  </div>
+</div>
