--- a/app/views/kinds/new.html.erb
+++ b/app/views/kinds/new.html.erb
@@ -1,5 +1,12 @@
-<h1>New Kind</h1>
+<div class="container">
+  <div class="row">
+    <h1>New Kind</h1>
+    <div class="col-lg-12">
 
-<%= render 'form' %>
 
-<%= link_to 'Back', kinds_path %>
+      <%= render 'form' %>
+
+      <%= link_to 'Back', kinds_path %>
+    </div>
+  </div>
+</div>
