--- a/app/views/kinds/show.html.erb
+++ b/app/views/kinds/show.html.erb
@@ -1,19 +1,26 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12">
 
-<p>
-  <strong>Name:</strong>
-  <%= @kind.name %>
-</p>
+      <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Color:</strong>
-  <%= @kind.color %>
-</p>
+      <p>
+        <strong>Name:</strong>
+        <%= @kind.name %>
+      </p>
 
-<p>
-  <strong>Personal:</strong>
-  <%= @kind.personal %>
-</p>
+      <p>
+        <strong>Color:</strong>
+        <%= @kind.color %>
+      </p>
 
-<%= link_to 'Edit', edit_kind_path(@kind) %> |
-<%= link_to 'Back', kinds_path %>
+      <p>
+        <strong>Personal:</strong>
+        <%= @kind.personal %>
+      </p>
+
+      <%= link_to 'Edit', edit_kind_path(@kind) %> |
+      <%= link_to 'Back', kinds_path %>
+    </div>
+  </div>
+</div>
