--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row">
+  <div class="row text-center">
     <div class="col-lg-12">
 
       <p id="notice"><%= notice %></p>
