--- a/app/views/games/answer.html.erb
+++ b/app/views/games/answer.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="row text-center">
     <div class="col-lg-12">
+      <h1> <%= @result %></h1>
     </div>
   </div>
 </div>
