add link to go back after answer

--- a/app/views/games/answer.html.erb
+++ b/app/views/games/answer.html.erb
@@ -2,6 +2,7 @@
   <div class="row text-center">
     <div class="col-lg-12">
       <h1> <%= @result %></h1>
+      <%= link_to 'Back', games_path %>
     </div>
   </div>
 </div>
