--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -14,41 +14,14 @@
     <!-- Projects Row -->
     <div class="row">
         <% @cards.each do  |card| %>
-            <%= render partial: 'card', :locals => { :card => card } %>
+        <%= render partial: 'card', :locals => { :card => card } %>
         <% end %>
     </div>
 
 
     <hr>
-
     <!-- Pagination -->
-    <div class="row text-center">
-        <div class="col-lg-12">
-            <ul class="pagination">
-                <li>
-                    <a href="#">&laquo;</a>
-                </li>
-                <li class="active">
-                    <a href="#">1</a>
-                </li>
-                <li>
-                    <a href="#">2</a>
-                </li>
-                <li>
-                    <a href="#">3</a>
-                </li>
-                <li>
-                    <a href="#">4</a>
-                </li>
-                <li>
-                    <a href="#">5</a>
-                </li>
-                <li>
-                    <a href="#">&raquo;</a>
-                </li>
-            </ul>
-        </div>
-    </div>
+    <%= render partial: 'pagination/pagination', locals: {objects: @cards} %>
     <!-- /.row -->
 
     <hr>
