--- a/app/views/cards/_form.html.erb
+++ b/app/views/cards/_form.html.erb
@@ -7,6 +7,7 @@
     <%= f.input :answer %>
     <%= f.input :image , hint: 'type the path of the picture on the internet'%>
     <%= f.input :share %>
+    <%= f.input :case_sensitive , hint: 'the answer considers uppercase letter?'%>
     <%= f.association :kind %>
   </div>
 
