--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -1,15 +1,16 @@
 <div class="container">
+<h2>Listing Cards</h2>
   <div class="row">
-    <h1>Listing Cards</h1>
     <div class="col-lg-12">
       <p id="notice"><%= notice %></p>
-      <table>
+        <table class="table table-hover table-responsive">
         <thead>
           <tr>
             <th>Title</th>
             <th>Question</th>
             <th>Answer</th>
             <th>Kind</th>
+            <th>Case Sensitive</th>
             <th>Share</th>
             <th colspan="3"></th>
           </tr>
@@ -21,7 +22,8 @@
             <td><%= card.title %></td>
             <td><%= card.question %></td>
             <td><%= card.answer %></td>
-            <td><%= card.kind.name %></td>
+            <td><%= card.name %></td>
+            <td><%= card.case_sensitive || false %></td>
             <td><%= card.share %></td>
             <td><%= link_to 'Show', card %></td>
             <td><%= link_to 'Edit', edit_card_path(card) %></td>
