--- a/app/views/kinds/index.html.erb
+++ b/app/views/kinds/index.html.erb
@@ -1,12 +1,9 @@
 <div class="container">
+<h2>Listing Kinds</h2>
   <div class="row">
-    <h1>Listing Kinds</h1>
     <div class="col-lg-12">
       <p id="notice"><%= notice %></p>
-
-
-
-      <table>
+      <table class="table table-hover table-responsive">
         <thead>
           <tr>
             <th>Name</th>
