--- a/app/views/cards/_form.html.erb
+++ b/app/views/cards/_form.html.erb
@@ -8,7 +8,7 @@
     <%= f.input :image , hint: 'type the path of the picture on the internet'%>
     <%= f.input :share %>
     <%= f.input :case_sensitive , hint: 'the answer considers uppercase letter?'%>
-    <%= f.association :kind %>
+    <%= f.association :kind, collection: Kind.where(user_id: @card.user_id) %>
   </div>
 
   <div class="form-actions">
