--- a/app/assets/stylesheets/card.css
+++ b/app/assets/stylesheets/card.css
@@ -251,3 +251,13 @@
 .card a:visited.game{text-decoration: none; color: white;}
 
 .btn .circle{ border-radius: 50%; width:32px; height:32px; line-height:18px;  }
+
+.card.hovercard .top{
+    font-size: 24px;
+    font-weight: bold;
+    line-height: 1;
+    background-color: white;
+    color: black;
+    vertical-align: middle;
+    padding: 6px;
+}
