--- a/app/views/kinds/_form.html.erb
+++ b/app/views/kinds/_form.html.erb
@@ -3,7 +3,7 @@
 
   <div class="form-inputs">
     <%= f.input :name %>
-    <%= f.input :color, collection: Kind::COLORS %>
+    <%= f.input :color, collection: Kind::COLORS, include_blank: false %>
     <%= f.input :personal %>
   </div>
 
