--- a/app/views/games/answer.html.erb
+++ b/app/views/games/answer.html.erb
@@ -10,7 +10,7 @@
           </div>
         </div>
         <div class="avatar">
-          <img alt="" src= <%= @card.image.present? ? @card.image : 'assets/flashcard.jpg'%> >
+          <img alt="" src= <%= @card.image.present? ? @card.image : '../../assets/flashcard.jpg'%> >
         </div>
         <%if @valid_answer %>
           <i class="fa fa-check fa-4x iconcolor-right"></i>
