--- a/app/views/games/_card.html.erb
+++ b/app/views/games/_card.html.erb
@@ -9,7 +9,7 @@
             </div>
         </div>
         <div class="avatar">
-            <img alt="" src= <%= card.image.present? ? card.image : 'assets/flashcard.jpg'%> >
+            <img alt="" src= <%= card.image.present? ? card.image : '../../assets/flashcard.jpg'%> >
         </div>
         <div class="info">
             <div class="title">
