--- a/app/views/games/answer.html.erb
+++ b/app/views/games/answer.html.erb
@@ -13,10 +13,14 @@
           <img alt="" src= <%= @card.image.present? ? @card.image : '../../assets/flashcard.jpg'%> >
         </div>
         <%if @valid_answer %>
-          <i class="fa fa-check fa-4x iconcolor-right"></i>
+        <i class="fa fa-check fa-4x iconcolor-right"></i>
         <% else %>
-          <i class="fa fa-times fa-4x iconcolor-error"></i>
-          <%= link_to 'Try Again', game_simple_path(@card.id) %>
+        <i class="fa fa-times fa-4x iconcolor-error"></i>
+        <% if @multiple %>
+        <%= link_to 'Try Again',   game_multiple_path(@card.id)  %>
+        <% else %>
+        <%= link_to 'Try Again', game_simple_path(@card.id) %>
+        <% end %>
         <% end %>
         <div class="info">
           <div class="title">
@@ -25,7 +29,7 @@
           </div>
         </div>
         <div class="bottom">
-        <%= link_to 'Games', games_path %>
+          <%= link_to 'Games', games_path %>
         </div>
       </div>
     </div>
