--- a/app/views/games/multiple.html.erb
+++ b/app/views/games/multiple.html.erb
@@ -1,6 +1,37 @@
 <div class="container">
   <div class="row text-center">
     <div class="col-lg-12">
+      <%= form_tag answer_path do %>
+      <%= hidden_field_tag :id, @card.id %>
+      <div class="card hovercard ">
+        <div class="cardheader <%= @card.color %>">
+          <div class="info">
+            <div class="title">
+              <%= label_tag :question, "Question: #{@card.question}?" %>
+
+            </div>
+          </div>
+        </div>
+        <div class="avatar">
+          <img alt="" src= <%= @card.image.present? ? @card.image : '../../assets/flashcard.jpg'%> >
+        </div>
+        <%= hidden_field_tag :multiple, true%>
+        <div class="form-group radio_buttons radio-answer">
+
+          <%= collection_radio_buttons(:answer,
+            :selected, @answers, :first, :last
+            ) do |b| %>
+            <span class='radio'>
+              <%= b.label { b.radio_button + b.text } %>
+            </span>
+            <% end  %>
+          </div>
+          <div class="bottom">
+            <%= submit_tag 'Answer' %>
+            <%= link_to 'Games', games_path %>
+          </div>
+        </div>
+      </div>
+      <% end %>
     </div>
   </div>
-</div>
